syntax = "proto3";
package lum.network.dfract;

import "gogoproto/gogo.proto";

option go_package = "github.com/lum-network/chain/x/dfract/types";

message Params {
  string deposit_denom = 1;
  string mint_denom = 2;
  int64 min_deposit_amount = 3;
}