syntax = "proto3";
package lum.network.dfract;

import "gogoproto/gogo.proto";
import "google/protobuf/wrappers.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "github.com/lum-network/chain/x/dfract/types";

message ProposalUpdateParams {
  option (gogoproto.goproto_stringer) = false;

  string title = 1;
  string description = 2;

  string withdrawal_address = 3
      [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  google.protobuf.BoolValue is_deposit_enabled = 4;
  repeated string deposit_denoms = 5 [ (gogoproto.nullable) = true ];
  string min_deposit_amount = 6 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = true
  ];
}